updated to current package versions

--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 ExtendableGrids = "cfc395e8-590f-11e8-1f13-43a2532b2fa8"
 ExtendableSparse = "95c220a8-a1cf-11e9-0c77-dbfce5f500b3"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GenericArpack = "408c25d7-97fa-4992-8bd9-ce15f1a09fe9"
 GridVisualize = "5eed8a63-0fb0-45eb-886d-8d5a387d12b8"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 JacobiDavidson = "11c68b98-9c9b-11e8-267b-bbb95576cead"
@@ -28,3 +29,4 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 VoronoiFVM = "82b139dc-5afc-11e9-35da-9b9bdfd336f3"
+VoronoiFVMDiffEq = "c4d4532c-19f6-4375-9ced-3808a145cd37"
